# permutationtest

./: LICENSE  README.md  example.ipynb  pyproject.toml
src/permutationtest/: permutation_test.py
src/tests/: conftest.py  tests.py
